--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -5,114 +6,49 @@
     <title>{% block title %}{{ title}}{% endblock %} 31客——源自欧洲经典口味！</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
-    <link rel="stylesheet" href="/css/shop/base.css" />
-    <link rel="stylesheet" href="/css/shop/style.css" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link href="/css/office/style.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/shop/airbum.common.js"></script>
     {% block js %}{% endblock %}
-    <!--[if IE 6]>
-    <script type="text/javascript" src="/js/DD_belatedPNG.js"></script>
-    <script type="text/javascript">
-        DD_belatedPNG.fix('img, .logo');
-    </script>
-    <![endif]-->
 </head>
 <body>
+    <div id="navMenu">
+      <ul>
+        <li>商品管理</li>
+        <li>促销管理</li>
+        <li>订单管理</li>
+        <li>事务管理</li>
+        <li>财务管理</li>
+        <li>报表统计</li>
+        <li>会员管理</li>
+        <li>权限管理</li>
+        <li><a href="//">系统设置</a></li>
+        <li><a href="//"></a></li>
+      </ul>
+    </div>
     <div id="header">
-        <div class="toolBar">
-            <a href="/" title="31客" class="logo" ></a>
-            <ul class="fl">
-                <li><a href="/pub/">大客户</a></li>
-                <li><a href="/about/">订购指南</a></li>
-                <li><a href="/ex/">K金换购</a></li>
-            </ul>
-            <ul class="fr">
-                <li>
-                    <form action="/search/" method="get">
-                        <input id="txtTopSearch" name="key" type="text" accesskey="s" class="topSearch" />
-                        <button type="submit" class="btn_search" title="搜索">搜索</button>
-                    </form>
-                </li>
-                <li class="messageBox">
-                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{{user.messageCount}}</span></a>
-                    <div id="pnlTopMessage" class="messagePop" style="display:none;">
-                        <h3>新消息</h3>
-                        <ul>
-                            <li><a href="/account/order/">新订单（ {{user.newOrder}} ）</a></li>
-                            <li><a href="/account/messages/">新留言（ {{user.newMessage}} ）</a></li>
-                        </ul>
-                        <a class="confirm" href="javascript:void(0)" onclick="clearMessageData();return false;">我知道了</a>
-                    </div>
-                </li>
-                <li><a href="/cart/">购物车</a></li>
-{% if request.user.is_authenticated %}
-                <li class="messageBox">
-                    <a id="lnkTopSetting" class="pic">设置<b></b></a>
-                    <div id="pnlTopProfile" class="messagePop" style="display: none;">
-                        <h3>{{ request.user}}</h3>
-                        <div class="editBox">
-                            <ul>
-                                <li class="email"><em>{{ request.user.email}}</em></li>
-                                <li><a href="/account/order/">我的订单</a></li>
-                                <li><a href="/account/settings/">个人设置</a></li>
-                                <li><a href="/account/changepwd/">修改密码</a></li>
-                            </ul>
-                        </div>
-                        <a class="confirm" href="/account/logout/">退出登录</a>
-                   </div>
-                </li>
-{% else %}
-                <li class="messageBox">
-                    <a href="/account/login/" id="lnkTopLogin" class="login">登录</a>
-                    <div id="loginMessage" class="messagePop" style="display: none;">
-                        <div class="topLoginBox">
-                            <form action="/account/login/" method="post">{% csrf_token %}
-                                <ul>
-                                    <li><label for="UserName">帐号：</label><input name="username" type="text" placeholder="用户名/邮箱" id="UserName" /></li>
-                                    <li><label for="Password">密码：</label><input name="password" type="password" id="Password" /></li>
-                                    <li align="right"><input class="btnGr bBtn" type="submit" value="登录" /><input type="hidden" name="next" value="/" /></li>
-                                </ul>
-                            </form>
-                        </div>
-                   </div>
-                </li>
-{% endif %}
-            </ul>
+        <div id="topBar">
+          <ul id="otherBar">
+            <li>admin [ 超级管理员 ]</li>
+            <li><a href="../" target="_blank">查看网店</a></li>
+            <li><a href="index.php?act=clear_cache">清除缓存</a></li>
+            <li><a href="login.php?act=logout">登出</a></li>
+          </ul>
+          <span id="urHere"><a href="index.php" id="index">31kecake 管理中心</a></span>
         </div>
-    </div>
-{% block scrollBox %}{% endblock %}
-{% block subMenu %}
-    <div id="scrollTop">
-        <ul class="intro">
-            <li><p><span class="txt">喜欢就直接拨打电话吧，4000 - 5927 - 31。</span><br><span class="txtFrom">—— 31客</span></p></li>
-            <li><p><span class="txt">吃个31客的蛋糕，喝喝下午茶，最幸福了。</span><br><span class="txtFrom">—— 晴天浅唱（微博网友）</span></p></li>
-            <li><p><span class="txt">第一次吃到杏仁咖啡，叹为观止。</span><br><span class="txtFrom">—— 韦夏（当代生活报记者）</span></p></li>
-            <li><p><span class="txt">美食，同大家一齐分享。</span><br><span class="txtFrom">—— 31客</span></p></li>
-        </ul>
-        <ul class="menu">
-            <li><a  href="/tag/cake/">蛋糕</a></li>
-            <li><a href="/tag/cookie/">曲奇</a><span></span></li>
-            <li><a href="/tag/chocolate/">巧克力</a></li>
-            <li><a href="/tag/pie/">水果派</a></li>
+        <ul id="toolsBar">
+          <li><a href="order.php?act=new_order">添加销售订单</a></li>
+          <li><a href="freetest.php">试吃任务</a></li>
+          <li><a href="inventory.php">库存</a></li>
+          <li><a href="map.php">地图</a></li>
+          <li><a href="shipments.php">出货安排</a></li>
         </ul>
     </div>
-{% endblock %}
-    <div id="content" class="clearfix">
-{% block content %}{% endblock %}
+    <div id="content">
+        {% block content %}{% endblock %}
     </div>
-    <div id="footer">
-        <div class="other">
-            <ul>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=672592854&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:672592854:4" height="16" border="0" alt="QQ" />672592854</a></li>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2310857615&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2310857615:4" height="16" border="0" alt="QQ" />2310857615</a></li>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2605043362&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2605043362:4" height="16" border="0" alt="QQ" />2605043362</a></li>
-                <li><a href="http://sae.sina.com.cn" target="_blank"><img src="http://static.sae.sina.com.cn/image/poweredby/117X12px.gif" title="Powered by Sina App Engine"></a></li>
-                <li><a href="home/about">订购专线: 4000-5927-31 | 客服电话：0771-5676753</a></li>
-                <li><a target="_blank" href="http://www.miibeian.gov.cn/">桂ICP备12002164号</a></li>
-            </ul>
-        </div>
-        <div class="footerLayer"></div>
-    </div>
+      <div id="footer">
+        <p>共执行 10 个查询，用时 0.071708 秒，Gzip 已禁用，内存占用 4.057 MB<br />版权所有 &copy; 2011-2012 leiddx，并保留所有权利。</p>
+      </div>
 </body>
 </html>
