--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -9,43 +8,129 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link href="/css/office/style.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/office/base.js"></script>
     {% block js %}{% endblock %}
-</head>
+</head>          
 <body>
-    <div id="navMenu">
-      <ul>
-        <li>商品管理</li>
-        <li>促销管理</li>
-        <li>订单管理</li>
-        <li>事务管理</li>
-        <li>财务管理</li>
-        <li>报表统计</li>
-        <li>会员管理</li>
-        <li>权限管理</li>
-        <li><a href="//">系统设置</a></li>
-        <li><a href="//"></a></li>
-      </ul>
-    </div>
-    <div id="header">
-        <div id="topBar">
-          <ul id="otherBar">
-            <li>admin [ 超级管理员 ]</li>
-            <li><a href="../" target="_blank">查看网店</a></li>
-            <li><a href="index.php?act=clear_cache">清除缓存</a></li>
-            <li><a href="login.php?act=logout">登出</a></li>
+    <ul id="navMenu">
+      <li><a href="/" id="showNav"></a></li>
+      <li>
+        <a href="/office/order/" class="nav">订单管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/order/">销售</a></li>
+            <li><a href="/office/order/">退货</a></li>
           </ul>
-          <span id="urHere"><a href="index.php" id="index">31kecake 管理中心</a></span>
         </div>
+      </li>
+      <li>
+        <a href="/office/logistics/" class="nav">物流管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/logistics/">物流配送</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/produce/" class="nav">生产管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">生产</a></li>
+            <li><a href="/office/inventory/">库存</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/after/" class="nav">售后管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">销售反馈</a></li>
+            <li><a href="/office/inventory/">试吃反馈</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/sales/" class="nav">促销管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">试吃申请</a></li>
+            <li><a href="/office/inventory/">会员折扣</a></li>
+            <li><a href="/office/inventory/">蛋糕券</a></li>
+            <li><a href="/office/inventory/">积分换购</a></li>
+            <li><a href="/office/inventory/">活动</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/financial/" class="nav">财务管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">订单对账</a></li>
+            <li><a href="/office/inventory/">账单核准</a></li>
+            <li><a href="/office/inventory/">退款</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/statistics/" class="nav">报表统计</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">订单统计</a></li>
+            <li><a href="/office/inventory/">销售明细</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/member/" class="nav">会员管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">会员信息</a></li>
+            <li><a href="/office/produce/">会员积分</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/purview/" class="nav">权限管理</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">权限分配</a></li>
+            <li><a href="/office/inventory/">管理员日志</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="/office/system/" class="nav">系统设置</a>
+        <div class="messagePop" style="display:none;">
+          <ul>
+            <li><a href="/office/produce/">商品</a></li>
+            <li><a href="/office/inventory/">标签</a></li>
+            <li><a href="/office/inventory/">规格</a></li>
+            <li><a href="/office/inventory/">价格</a></li>
+            <li><a href="/office/inventory/">首页幻灯片</a></li>
+            <li><a href="/office/inventory/">支付方式</a></li>
+            <li><a href="/office/inventory/">配送区域</a></li>
+            <li><a href="/office/inventory/">收货时间</a></li>
+            <li><a href="/office/inventory/">物流时间</a></li>
+            <li><a href="/office/inventory/">文件校验</a></li>
+          </ul>
+        </div>
+      </li>
+      <li><a href="/" target="_blank">查看网店</a></li>
+      <li><a href="/account/logout/">登出</a></li>
+    </ul>
+    <div id="header">
+        <div id="urHere"><a href="/office/" id="index">31kecake 管理中心</a></div>
         <ul id="toolsBar">
-          <li><a href="order.php?act=new_order">添加销售订单</a></li>
-          <li><a href="freetest.php">试吃任务</a></li>
-          <li><a href="inventory.php">库存</a></li>
-          <li><a href="map.php">地图</a></li>
-          <li><a href="shipments.php">出货安排</a></li>
+          <li><a href="/office/order/new/">添加销售订单</a></li>
+          <li><a href="/office/freetest/">试吃任务</a></li>
+          <li><a href="/office/inventory/">库存</a></li>
+          <li><a href="/office/map/">地图</a></li>
+          <li><a href="/office/shipments/">出货安排</a></li>
         </ul>
+        <span id="adminName">{{ request.user.username }} [ {% if request.user.is_superuser %}超级管理员{% else %}普通管理{% endif %} ]</span>
     </div>
     <div id="content">
-        {% block content %}{% endblock %}
+{% block content %}{% endblock %}
     </div>
       <div id="footer">
         <p>共执行 10 个查询，用时 0.071708 秒，Gzip 已禁用，内存占用 4.057 MB<br />版权所有 &copy; 2011-2012 leiddx，并保留所有权利。</p>
