--- a/office/templates/office.htm
+++ b/office/templates/office.htm
@@ -4,79 +4,56 @@
 
 
 {% block content %}
-<table width="100%">
+      <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
           <th colspan="4" align="left">订单统计信息</th>
         </tr>
         <tr>
-          <td width="15%"><a href="order.php?act=list&condition=110">待发货订单:</a></td>
+          <td width="15%"><a href="/office/order/0/">未确认订单:</a></td>
+          <td width="35%"><strong>5</strong></td>
+          <td width="15%"><a href="/office/order/10/">已确认订单:</a></td>
+          <td width="35%"><strong>34</strong></td>
+        </tr>
+        <tr>
+          <td><a href="/office/order/4/">待支付订单:</a></td>
+          <td><strong>6224</strong></td>
+          <td><a href="/office/order/back/">已完成订单:</a></td>
+          <td><strong></strong></td>
+        </tr>
+      </table>
+      <table cellpadding="3" cellspacing="1" width="100%">
+        <tr>
+          <th colspan="4" align="left">物流统计信息</th>
+        </tr>
+        <tr>
+          <td width="15%"><a href="/office/order/110/">待发货订单:</a></td>
           <td width="35%"><strong style="color: red">21</strong></td>
-          <td width="15%"><a href="order.php?act=list&condition=0">未确认订单:</a></td>
+          <td width="15%"><a href="/office/order/0/">已发货订单:</a></td>
           <td width="35%"><strong>5</strong></td>
         </tr>
         <tr>
-          <td><a href="order.php?act=list&condition=10">待支付订单:</a></td>
+          <td><a href="/office/order/10/">已签订单:</a></td>
           <td><strong>34</strong></td>
-          <td><a href="order.php?act=list&condition=4">已成交订单数:</a></td>
+          <td><a href="/office/order/4/">拒签订单:</a></td>
           <td><strong>6224</strong></td>
         </tr>
-        <tr>
-          <td><a href="back_order.php">退款申请:</a></td>
-          <td><strong></strong></td>
-          <td><td>
-          </td></td>
-        </tr>
       </table>
-      <table width="100%">
+      <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="4" align="left">访问统计</th>
+          <th colspan="4" align="left">工厂统计信息</th>
         </tr>
         <tr>
-          <td width="15%">在线人数:</td>
-          <td width="35%"><strong>419</strong></td>
-          <td width="15%"><a href="members_feed.php">最新留言:</a></td>
-          <td width="35%"><strong>0</strong></td>
-        </tr>
-      </table>
-      <table width="100%">
-        <tr>
-          <th colspan="4" align="left">系统信息</th>
+          <td width="15%"><a href="/office/order/110/">生产请求:</a></td>
+          <td width="35%"><strong style="color: red">21</strong></td>
+          <td width="15%"><a href="/office/order/0/">已生产:</a></td>
+          <td width="35%"><strong>5</strong></td>
         </tr>
         <tr>
-          <td width="15%">服务器操作系统:</td>
-          <td width="35%">Linux (10.67.15.22)</td>
-          <td width="15%">Web 服务器:</td>
-          <td width="35%">Apache</td>
+          <td><a href="/office/order/10/">停产请求:</a></td>
+          <td><strong>34</strong></td>
+          <td><a href="/office/order/4/">已停产:</a></td>
+          <td><strong>6224</strong></td>
         </tr>
-        <tr>
-          <td>PHP 版本:</td>
-          <td>5.3.8</td>
-          <td>MySQL 版本:</td>
-          <td>5.1.40-log</td>
-        </tr>
-        <tr>
-          <td>安全模式:</td>
-          <td>否</td>
-          <td>安全模式GID:</td>
-          <td>否</td>
-        </tr>
-        <tr>
-          <td>Socket 支持:</td>
-          <td>是</td>
-          <td>时区设置:</td>
-          <td>UTC</td>
-        </tr>
-        <tr>
-          <td>GD 版本:</td>
-          <td>GD2 ( JPEG GIF PNG)</td>
-          <td>Zlib 支持:</td>
-          <td>是</td>
-        </tr>
-        <tr>
-          <td>编码:</td>
-          <td>utf-8</td>
-          <td>文件上传的最大大小:</td>
-          <td>10M</td>
-        </tr>
-      </table>
+      </table>        
+
 {% endblock %}
