--- a/static/css/office/style.css
+++ b/static/css/office/style.css
@@ -1,6 +1,6 @@
 /* Overall: Start */
 body{
-  padding:5px;
+  margin:5px;
   color: #FFFFFF;
   background:#278296;
   font: 12px "sans-serif", "Arial", "Verdana";
@@ -93,21 +93,25 @@ input.button:active{
 .wow_item_7{ color: #E5CC80 !important; } /* heirloom (gold) */
 .wow_item_8{ color: RED !important; } /* epic (red) */
 
+.on{color: #EB8A3D;}
+
 /* Overall: End */
 
 
 /* navMenu: Start */
 
 #navMenu{
-  display:block;
   float:left;
-  padding:5px 0px;
+  padding:2px 0px;
   color: #335B64;
   background:#FFFFFF;
   position: fixed; 
   top:5px; 
-  left:0px;
-  border: 1px solid #BBDDE5;
+  right:-760px;
+  border:1px solid #BBDDE5;
+  box-shadow:0 0 3px #A7A3A3;
+  border-radius: 3px 0 0 3px;
+  z-index:998;
 }
 
 #navMenu li{
@@ -116,7 +120,21 @@ input.button:active{
   float:left;
   margin:0 5px;
   font-weight: bold;
+  position: relative;
 }
+
+#navMenu #showNav{
+  display: block;
+  width: 22px;
+  height: 16px;
+  padding: 0 10px 0 0;
+  background: url(/images/ico_showmorer.png) no-repeat;
+}
+
+#navMenu .messagePop{position:absolute;z-index:999;min-width:54px;background:#FFF;box-shadow:0 2px 4px rgba(30, 25, 25, 0.5);overflow:hidden;top:25px;left: 0;  border-radius: 3px;}
+#navMenu .messagePop li{float:none;width:100%;margin:0px;padding:0px;}
+#navMenu .messagePop li a{display:block;height:27px;line-height:27px;padding:0 10px;}
+#navMenu .messagePop li a:hover{display:block;background:#EB8A3D;height:27px;line-height:27px;color:#FFF;padding:0 10px;border-radius:3px;}
 
 /* navMenu: End */
 
@@ -124,10 +142,9 @@ input.button:active{
 /* header: Start */
 
 #header{
-  display:block;
-  float:left;
-  width:100%;
+  width:99.8%;
   min-width: 640px;
+  min-height: 49px;  
 }
 
 #header a{
@@ -139,15 +156,10 @@ input.button:active{
 }
 
 #header #urHere{
-  display:block;
-  float:left;
-  width:416px;
-  color:#9CACAF;
-}
-
-#header #topBar{
-  display:block;
   height:24px;
+  width: 100%;
+  float:left;
+  color:#9CACAF;
 }
 
 #header #urHere a{
@@ -161,12 +173,17 @@ input.button:active{
 #header #urHere #index{
   line-height:24px;
   font-size:14px;
+  font-weight: bold;
   color:#FFFFFF;
 }
 
-#header #otherBar{
+#header #adminName{
   display:block;
   float:right;
+  padding: 0 10px 0 10px;
+  margin: 3px 0 0 0;
+  border-left: 1px solid #FFF;
+  white-space:nowrap;
 }
 
 #header #otherBar li{
@@ -211,9 +228,7 @@ input.button:active{
 /* content: Start */
 
 #content{
-  display:block;
-  float:left;
-  width:99.9%;
+  width:99.8%;
   min-width: 640px;
   margin:0 0 10px 0;
   background:#DDEEF2;
@@ -392,10 +407,8 @@ input.button:active{
 /* content: End */
 
 #footer{
-  display:block;
-  float:left;
-  width:99.9%;
-  min-width: 640px;  
+  width:99.8%;
+  min-width: 640px; 
   padding:15px 0px;
   background:#DDEEF2;
   color:#9CACAF;
