New APP For order 增加 管理中心权限验证
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -15,103 +15,103 @@
     <ul id="navMenu">
       <li><a href="/" id="showNav"></a></li>
       <li>
-        <a href="/office/order/" class="nav">订单管理</a>
+        <a href="/order/" class="nav">订单管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/order/">销售</a></li>
-            <li><a href="/office/order/">退货</a></li>
+            <li><a href="/order/">销售</a></li>
+            <li><a href="/back/">退货</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/logistics/" class="nav">物流管理</a>
+        <a href="/logistics/" class="nav">物流管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/logistics/">物流配送</a></li>
+            <li><a href="/logistics/">物流配送</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/produce/" class="nav">生产管理</a>
+        <a href="/produce/" class="nav">生产管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">生产</a></li>
-            <li><a href="/office/inventory/">库存</a></li>
+            <li><a href="/produce/">生产</a></li>
+            <li><a href="/inventory/">库存</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/after/" class="nav">售后管理</a>
+        <a href="/after/" class="nav">售后管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">销售反馈</a></li>
-            <li><a href="/office/inventory/">试吃反馈</a></li>
+            <li><a href="/after/">销售反馈</a></li>
+            <li><a href="/tryeat//">试吃反馈</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/sales/" class="nav">促销管理</a>
+        <a href="/discount/" class="nav">促销管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">试吃申请</a></li>
-            <li><a href="/office/inventory/">会员折扣</a></li>
-            <li><a href="/office/inventory/">蛋糕券</a></li>
-            <li><a href="/office/inventory/">积分换购</a></li>
-            <li><a href="/office/inventory/">活动</a></li>
+            <li><a href="/applytryeat/">试吃申请</a></li>
+            <li><a href="/discount/">会员折扣</a></li>
+            <li><a href="/ticket/">蛋糕券</a></li>
+            <li><a href="/integral/">积分换购</a></li>
+            <li><a href="/party/">活动</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/financial/" class="nav">财务管理</a>
+        <a href="/reconciliation/" class="nav">财务管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">订单对账</a></li>
-            <li><a href="/office/inventory/">账单核准</a></li>
-            <li><a href="/office/inventory/">退款</a></li>
+            <li><a href="/reconciliation/">订单对账</a></li>
+            <li><a href="/inventory/">账单核准</a></li>
+            <li><a href="/inventory/">退款</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/statistics/" class="nav">报表统计</a>
+        <a href="/statistics/" class="nav">报表统计</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">订单统计</a></li>
-            <li><a href="/office/inventory/">销售明细</a></li>
+            <li><a href="/statistics/">订单统计</a></li>
+            <li><a href="/statssale/">销售明细</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/member/" class="nav">会员管理</a>
+        <a href="/member/" class="nav">会员管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">会员信息</a></li>
-            <li><a href="/office/produce/">会员积分</a></li>
+            <li><a href="/member/">会员信息</a></li>
+            <li><a href="/memberint/">会员积分</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/purview/" class="nav">权限管理</a>
+        <a href="/purview/" class="nav">权限管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">权限分配</a></li>
-            <li><a href="/office/inventory/">管理员日志</a></li>
+            <li><a href="/purview/">权限分配</a></li>
+            <li><a href="/adminlog/">管理员日志</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="/office/system/" class="nav">系统设置</a>
+        <a href="/system/" class="nav">系统设置</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/office/produce/">商品</a></li>
-            <li><a href="/office/inventory/">标签</a></li>
-            <li><a href="/office/inventory/">规格</a></li>
-            <li><a href="/office/inventory/">价格</a></li>
-            <li><a href="/office/inventory/">首页幻灯片</a></li>
-            <li><a href="/office/inventory/">支付方式</a></li>
-            <li><a href="/office/inventory/">配送区域</a></li>
-            <li><a href="/office/inventory/">收货时间</a></li>
-            <li><a href="/office/inventory/">物流时间</a></li>
-            <li><a href="/office/inventory/">文件校验</a></li>
+            <li><a href="/item/">商品</a></li>
+            <li><a href="/tag/admin/">标签</a></li>
+            <li><a href="/specification/">规格</a></li>
+            <li><a href="/price/">价格</a></li>
+            <li><a href="/slide/">首页幻灯片</a></li>
+            <li><a href="/payment/">支付方式</a></li>
+            <li><a href="/area/">配送区域</a></li>
+            <li><a href="/signtime/">收货时间</a></li>
+            <li><a href="/logistics/">物流时间</a></li>
+            <li><a href="/filecheck/">文件校验</a></li>
           </ul>
         </div>
       </li>
