--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -2,12 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{% block title %}{{ title}}{% endblock %} 31客——源自欧洲经典口味！</title>
+    <title>{% block title %}{{ title}}{% endblock %} - 31客管理中心</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link href="/css/office/style.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.tablesorter.js"></script>
     <script type="text/javascript" src="/js/office/base.js"></script>
     {% block js %}{% endblock %}
 </head>          
@@ -102,7 +103,7 @@
         <a href="/system/" class="nav">系统设置</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/item/">商品</a></li>
+            <li><a href="/item/admin/">商品</a></li>
             <li><a href="/tag/admin/">标签</a></li>
             <li><a href="/specification/">规格</a></li>
             <li><a href="/price/">价格</a></li>
@@ -119,17 +120,20 @@
       <li><a href="/account/logout/">登出</a></li>
     </ul>
     <div id="header">
-        <div id="urHere"><a href="/office/" id="index">31kecake 管理中心</a></div>
+        <div id="urHere"><a href="/office/" id="index">31kecake 管理中心</a> {% block urHere %}{% endblock %}</div>
         <ul id="toolsBar">
-          <li><a href="/office/order/new/">添加销售订单</a></li>
-          <li><a href="/office/freetest/">试吃任务</a></li>
-          <li><a href="/office/inventory/">库存</a></li>
-          <li><a href="/office/map/">地图</a></li>
-          <li><a href="/office/shipments/">出货安排</a></li>
+          <li><a href="/order/new/">添加销售订单</a></li>
+          <li><a href="/freetest/">试吃任务</a></li>
+          <li><a href="/inventory/">库存</a></li>
+          <li><a href="/map/">地图</a></li>
+          <li><a href="/shipments/">出货安排</a></li>
         </ul>
         <span id="adminName">{{ request.user.username }} [ {% if request.user.is_superuser %}超级管理员{% else %}普通管理{% endif %} ]</span>
     </div>
     <div id="content">
+      <div id="actionLink">
+        <a href="/item/new/">添加商品</a>
+      </div>
 {% block content %}{% endblock %}
     </div>
       <div id="footer">
