--- a/message/templates/message.htm
+++ b/message/templates/message.htm
@@ -1,10 +1,12 @@
 {% extends "shop.base.htm" %}
 
+{% block meta %}{% if autoRedirect %}<meta http-equiv="refresh" content="{{ speed }};URL={{ backUrl }}" />{% endif %}{% endblock %}
+
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
         <div class="pWhite">
-            <h3>{{ info }}</h3>
+            <h3>{{ title }}</h3>
             <p>{{ message }}</p>
         </div>
 {% endblock %}
