--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -5,12 +5,13 @@
     <title>{% block title %}{{ title }}{% endblock %} 31客——源自欧洲经典口味！</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
+    {% block meta %}{% endblock %}
     <link rel="stylesheet" href="/css/shop/base.css" />
     <link rel="stylesheet" href="/css/shop/style.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/shop/airbum.common.js"></script>
-    {% block js %}{% endblock %}
+{% block js %}{% endblock %}
     <!--[if IE 6]>
     <script type="text/javascript" src="/js/DD_belatedPNG.js"></script>
     <script type="text/javascript">
@@ -35,12 +36,12 @@
                     </form>
                 </li>
                 <li class="messageBox">
-                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{{request.user.allmsgCount}}</span></a>
+                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{% if request.user.allmsgCount %}{{request.user.allmsgCount}}{% else %}0{% endif %}</span></a>
                     <div id="pnlTopMessage" class="messagePop" style="display:none;">
                         <h3>新消息</h3>
                         <ul>
-                            <li><a href="/account/order/">新订单（ {{request.user.newOrderCount}} ）</a></li>
-                            <li><a href="/account/messages/">新留言（ {{request.user.newMsgCount}} ）</a></li>
+                            <li><a href="/account/order/">新订单（ {% if request.user.newOrderCount %}{{request.user.newOrderCount}}{% else %}0{% endif %} ）</a></li>
+                            <li><a href="/account/messages/">新留言（ {% if request.user.newMsgCount %}{{request.user.newMsgCount}}{% else %}0{% endif %} ）</a></li>
                         </ul>
                         <a class="confirm" href="javascript:void(0)" onclick="clearMessageData();return false;">我知道了</a>
                     </div>
