--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -139,7 +139,7 @@
 {% block content %}{% endblock %}
     </div>
       <div id="footer">
-        <p>共执行 10 个查询，用时 0.071708 秒，Gzip 已禁用，内存占用 4.057 MB<br />版权所有 &copy; 2011-2012 leiddx，并保留所有权利。</p>
+        <p>版权所有 &copy; 2012-2013 leiddx，并保留所有权利。</p>
       </div>
 </body>
 </html>
