修改些setting基础配置
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -67,8 +67,8 @@
         <div class="messagePop" style="display:none;">
           <ul>
             <li><a href="/reconciliation/">订单对账</a></li>
-            <li><a href="/inventory/">账单核准</a></li>
-            <li><a href="/inventory/">退款</a></li>
+            <li><a href="/approved/">账单核准</a></li>
+            <li><a href="/reimburse/">退款</a></li>
           </ul>
         </div>
       </li>
