--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -11,6 +11,12 @@
 {% block content %}
         <p class="viewDown">向下滚动浏览</p>
         <ul class="pinBox">
+{% for i in itemList %}
+            <li><a href="/tag/{{ i.tag }}/" class="tags_{{ i.colorClass }}">itemTag: {{ i.tag }}</a></li>
+{% endfor %}
+{% for i in tagList %}
+            <li><a href="/tag/{{ i.tag }}/" class="tags_{{ i.colorClass }}">tag: {{ i.tag }}</a></li>
+{% endfor %}
             <li>
                 <img alt="香浓巧克力" title="香浓巧克力" src="/m/DSC_3495.jpg" width="960px" />
                 <div class="pinSide960">
