继续改进 Tag 算法
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -45,7 +45,7 @@
           <h4>标签</h4>
           <div class="tagsBox">
 {% for i in tagList %}
-              <a href="/tag/{{ i.tag }}/"class="tags_{{ i.colorClass }}">{{ i.tag }}</a>
+              <a href="/tag/{{ i.tag }}/"class="tags_{{ tagsClass|random }}">{{ i.tag }}</a>
 {% endfor %}
           </div>
         </div>
